--- a/App.Web/Views/Main/Dashboard.cshtml
+++ b/App.Web/Views/Main/Dashboard.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "COVID Response";
     Layout = "~/Views/Shared/_LayoutBrac.cshtml";
-    string act = "";
+    ViewBag.page = "dashboard";
 }
 @{
 
