--- a/App.Web/Views/Shared/_LayoutBrac.cshtml
+++ b/App.Web/Views/Shared/_LayoutBrac.cshtml
@@ -155,7 +155,7 @@
             </div>
         </div>
     </div>
-    <div class="container-custom">
+    <div class="container-custom mt-4">
         @RenderBody()
 
     </div>
