--- a/App.Web/Content/css/brac/site.css
+++ b/App.Web/Content/css/brac/site.css
@@ -1,23 +1,20 @@
 @font-face {
     font-family: 'HelveticaNeue';
-    src: url(../../src/fonts/HelveticaNeueBold.ttf) format("truetype");
+    src: url(../Content/src/fonts/HelveticaNeueBold.ttf) format("truetype");
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'OriyaSangamMN';
-    src: url(../../src/fonts/oriya-sangam/OriyaSangamMN.eot);
+    src: url(../Content/src/fonts/oriya-sangam/OriyaSangamMN.eot);
     /* IE9 Compat Modes */
-    src: url(../../src/fonts/oriya-sangam/OriyaSangamMN.eot?#iefix) format("embedded-opentype"), url(../../src/fonts/oriya-sangam/OriyaSangamMN.woff2) format("woff2"), url(../../src/fonts/oriya-sangam/OriyaSangamMN.woff) format("woff"), url(../../src/fonts/oriya-sangam/OriyaSangamMN.ttf) format("truetype"), url(../../src/fonts/oriya-sangam/OriyaSangamMN.svg#svgFontName) format("svg");
+    src: url(../Content/src/fonts/oriya-sangam/OriyaSangamMN.eot?#iefix) format("embedded-opentype"), url(../Content/src/fonts/oriya-sangam/OriyaSangamMN.woff2) format("woff2"), url(../Content/src/fonts/oriya-sangam/OriyaSangamMN.woff) format("woff"), url(../Content/src/fonts/oriya-sangam/OriyaSangamMN.ttf) format("truetype"), url(../Content/src/fonts/oriya-sangam/OriyaSangamMN.svg#svgFontName) format("svg");
     /* Legacy iOS */
 }
+
 .dropdown-menu.show {
     display: block;
-    min-width: 400px;
-    padding: 10px;
-    z-index: 100000;
-    margin-right: 25px;
 }
 
 .bullentin-item::before {
@@ -60,9 +57,7 @@
         color: #D10D74;
     }
 
-#divactivities.dropdown-menu {
-    box-shadow: 0px 6px 15px #222;
-}
+
 
 .brac-link {
     color: #D10D74;
@@ -72,11 +67,7 @@ a.brac-link:hover {
     color: #D10D74;
 }
 
-@media screen and (min-width: 992px) {
-    #bullentin {
-        width: 600px !important;
-    }
-}
+
 
 .releaf-summery {
     text-align: left;
@@ -128,9 +119,36 @@ a.brac-link:hover {
 }
 
 .box-shadow {
-    min-height: 220px;
-    margin-top:10px;
+    min-height: 250px;
 }
-.container-custom {
+/*.container-custom {
     width: 97%;
+}*/
+
+.icon-text-item.cash {
+    min-width: 100px;
+}
+
+.overview-box .img-number-text-item {
+    text-align: center;
+    width: 25%;
+    height: 100px;
+}
+
+@media screen and (min-width: 992px) {
+    #bullentin {
+        width: 600px !important;
+    }
+}
+
+@media (max-width: 576px) {
+    .box-shadow {
+        min-height: 350px !important;
+    }
+
+    .overview-box-wrapper.box-shadow.position-relative .view-in-deatils {
+        position: absolute;
+        bottom: 10px;
+        left: 30%;
+    }
 }
